# google-mcp

./: .gitignore  BUILD_INSTRUCTIONS.md  Dockerfile  PLAN.md  PROCESS.md  README.md  SETUP.md  TWITTER_MCP_PLAN.md  cache.py  notebooklm_keepalive.py  pyproject.toml  requirements.txt  server.py  tools_arxiv.py  tools_books.py  tools_finance.py  tools_maps.py  tools_notebooklm.py  tools_patents.py  tools_translate.py  tools_webpage.py  tools_wikipedia.py  tools_youtube.py
tests/: test_cache.py  test_tools.py
