[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-mcp"
version = "0.1.0"
description = "MCP server for Google services that have NO official API — YouTube Transcripts, Google Trends, News, Scholar, Books, Maps, Patents, NotebookLM"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Miles Shah", email = "miles@example.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=0.1.0",
    "youtube-transcript-api>=1.2.0",
    "pytrends>=4.7.3",
    "gnews>=0.1.3",
    "scholarly>=1.7.11",
    "googlemaps>=4.10.0",
    "scrapetube>=2.5.1",
    "httpx>=0.27.0",
    "pytest>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0"
]

[project.urls]
Homepage = "https://github.com/Miles0sage/google-mcp"
Repository = "https://github.com/Miles0sage/google-mcp"

[project.scripts]
google-mcp-server = "server:main"